[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ltfs-tools"
version = "0.1.0"
description = "Cross-platform tools for managing LTO tape archives with LTFS"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Claudio Silva"}
]
keywords = ["ltfs", "lto", "tape", "archive", "backup", "mhl"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Archiving",
    "Topic :: System :: Archiving :: Backup",
]
dependencies = [
    "xxhash>=3.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "xattr>=0.10.0; sys_platform != 'win32'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
fuse = [
    "fusepy>=3.0.0",
]

[project.scripts]
ltfs-tool = "ltfs_tools.cli:main"

[project.urls]
Homepage = "https://github.com/ctsilva/ltfs-tools"
Issues = "https://github.com/ctsilva/ltfs-tools/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
